--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/GAS_Practice/Map/TestMap.TestMap
+EditorStartupMap=/Game/GAS_Practice/Map/TestMap.TestMap
+GlobalDefaultGameMode=/Game/GAS_Practice/Game/SF_BP_GameMode.SF_BP_GameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
